Fix Projects align and change color in about section

--- a/css/body.css
+++ b/css/body.css
@@ -18,7 +18,6 @@
   padding-top: 100px;
 
   width: 70%;
-  height: 80px;
   margin: auto;
 
   text-align: center;
@@ -61,7 +60,7 @@
 
   background-image: url('../images/Jonatan\ small.png');
   background-position: bottom;
-  background-size: 70%;
+  background-size: 60%;
   background-repeat: no-repeat;
 
   transition: 0.4s;
@@ -158,15 +157,12 @@
   justify-content: center;
   align-items: center;
   flex-flow: column;
-
-  background-image: url('../images/bacgroud.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
 }
 
 #Body .about h2 {
   margin: 0 auto;
+
+  color: #222;
 }
 
 #Body .about .container {
@@ -178,18 +174,18 @@
   display: flex;
   flex-wrap: wrap;
 
-  color: #444;
+  color: #AAA;
 }
 
 #Body .about .container .texts {
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: #222;
 
   margin: auto;
 
-  border-radius: 5px;
-  box-shadow: 5px 5px 15px #999;
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px #CCC;
 
   display: flex;
   flex-flow: column;
@@ -201,37 +197,45 @@
   margin: 30px;
 }
 
-#Body .about .container .texts .socialCont {
-  width: 20%;
-  height: 60px;
-  min-width: 150px;
+#Body .about .container .texts .knowMe {
+  text-align: center;
+}
 
-  margin: 10px;
+#Body .about .container .texts .socialCont {
+  height: 70px;
+  min-width: 100px;
+
+  margin: auto;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 #Body .about .container .texts .socialCont a {
   margin: auto;
+  
+  width: 60px;
+  height: 60px;
+
+  display: flex;
 }
 
 #Body .about .container .texts .socialCont a .social {
   width: 60px;
   height: 60px;
 
-  background-color: #FFF;
+  background-color: #222;
 
   margin: auto;
+  display: flex;
 }
 
 #Body .about .container .texts .socialCont a .twitter svg {
   width: 50px;
   height: 50px;
 
-  border-radius: 50%;
-
-  fill: #BBB;
+  fill: #AAA;
+  margin: auto;
 } #Body .about .container .texts .socialCont a .twitter svg:hover {
   transform: scale(.95);
   fill: var(--blue-foo);
@@ -241,9 +245,8 @@
   width: 50px;
   height: 50px;
 
-  border-radius: 50%;
-
-  fill: #BBB;
+  fill: #AAA;
+  margin: auto;
 } #Body .about .container .texts .socialCont a .linkedin svg:hover {
   transform: scale(.95);
   fill: var(--blue-light);
@@ -252,21 +255,35 @@
 #Body .about .container .texts .seeMyCV {
   font-size: 1.2em;
   margin: 30px;
+
+  text-align: center;
+}
+
+#Body .about .container .texts a {
+  display: flex;
+
+  width: 220px;
+  height: 40px;
+
+  margin: auto;
+  margin-bottom: 30px;
 }
 
 #Body .about .container .texts .resume {
-  width: 90px;
+  width: 220px;
   height: 40px;
 
-  margin: 30px;
-  margin-top: 0;
+  margin: auto;
 
   outline: none;
   border: none;
 
   color: white;
+
+  border-radius: 20px;
   background-color: var(--magenta-light);
   transition: 0.15s;
+
 } #Body .about .container .texts .resume:hover {
   cursor: pointer;
 } #Body .about .container .texts .resume:active {
@@ -287,17 +304,21 @@
   display: flex;
   flex-wrap: wrap;
 
-  background-color: #FFF;
+  background-color: rgb(245, 245, 245);
 }
 
 #Body .Portfolio h2 {
   border-top: 0;
+  margin-bottom: 50px;
+
+  color: #555;
 }
 
 #Body .Portfolio .gridPort {
   width: 90%;
 
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
 
   margin: auto;
@@ -310,10 +331,10 @@
   width: 450px;
   height: 250px;
 
-  margin: 10px;
+  margin: 20px auto;
 
   border-radius: 5px;
-  box-shadow: 5px 5px 15px #999;
+  box-shadow: 5px 5px 15px #CCC;
 
   background-position: center;
   background-repeat: no-repeat;
@@ -322,7 +343,7 @@
 } #Body .Portfolio .gridPort .project:hover {
   cursor: pointer;
   background-size: 0%;
-  background-color: #111;
+  background-color: #444;
 }
 
 #Body .Portfolio .gridPort .project p {
@@ -338,8 +359,8 @@
   transition: 0.25s;
 } #Body .Portfolio .gridPort .project:hover p {
   opacity: 1;
-  background-color: #111;
-  color: #FFF;
+  background-color: #444;
+  color: #DDD;
 }
 
 #Body .Portfolio .gridPort .simtac {
